update footer & add dotenv

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,13 +9,18 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #ffffff;
+    --foreground: #000000;
   }
 }
+
+.mulish-font {
+  font-family: "Mulish", serif;
+  font-optical-sizing: auto;
+}
+
 
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
 }
